Moved to new branch

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -5,33 +5,37 @@
    "metadata": {},
    "source": [
     "## Kaggle Titanic\n",
-    "### feat2/wip\n",
+    "### feat2/score1/wip\n",
     "This branch is modified from feat1. Changes are\n",
-    "    - Drop the name feature in addition to passengerID (it seem redundancy)"
+    "    - Drop the name feature in addition to passengerID (it seem redundancy)\n",
+    "    - Use accuracy instead of ROC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\tTitanic.ipynb\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTitanic.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
+      "Switched to a new branch 'feat2/score1/wip'\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'master'\n",
-    "git fetch"
+    "git log"
    ]
   },
   {
@@ -62,8 +66,8 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Finised testing'\n",
-    "git push --set-upstream origin feat2/wip"
+    "git commit -m 'Moved to new branch'\n",
+    "git push --set-upstream origin feat2/score1/wip"
    ]
   },
   {
