Branched to feat3

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -16,14 +16,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  cost1/feat1/wip\n",
+      "  cost1/feat2/wip\n",
+      "  cost1/wip\n",
+      "  feat1/score1/wip\n",
+      "  feat1/wip\n",
+      "  feat2/score1/wip\n",
+      "  feat2/wip\n",
+      "* feat3/wip\n",
+      "  master\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "git checkout -b 'cost1/wip'"
+    "git branch"
    ]
   },
   {
@@ -54,7 +70,7 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Added some markdown'\n",
+    "git commit -m 'Branched to feat3'\n",
     "git push"
    ]
   },
