Branched to feat3

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -53,17 +53,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master c0b39e4] Established baseline master branch\n",
-      " 1 file changed, 1500 insertions(+), 1457 deletions(-)\n",
-      " rewrite Titanic.ipynb (81%)\n"
+      "[feat3/wip 1d24d4f] Branched to feat3\n",
+      " 1 file changed, 21 insertions(+), 5 deletions(-)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   af209b1..c0b39e4  master -> master\n"
+      "fatal: The current branch feat3/wip has no upstream branch.\n",
+      "To push the current branch and set the remote as upstream, use\n",
+      "\n",
+      "    git push --set-upstream origin feat3/wip\n",
+      "\n"
      ]
     }
    ],
@@ -71,7 +73,7 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git commit -m 'Branched to feat3'\n",
-    "git push"
+    "git push --set-upstream origin feat3/wip"
    ]
   },
   {
