Added some markdown

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Master branch. Will diverge from this branch when want to try something new."
+    "### feat3\n",
+    "Will try to add mean/median to Nan data. Use accuracy. Drop name feature right off the bat."
    ]
   },
   {
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -53,26 +54,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat3/wip 1d24d4f] Branched to feat3\n",
-      " 1 file changed, 21 insertions(+), 5 deletions(-)\n"
+      "[feat3/wip aab8b54] Branched to feat3\n",
+      " 1 file changed, 9 insertions(+), 7 deletions(-)\n",
+      "Branch feat3/wip set up to track remote branch feat3/wip from origin.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: The current branch feat3/wip has no upstream branch.\n",
-      "To push the current branch and set the remote as upstream, use\n",
-      "\n",
-      "    git push --set-upstream origin feat3/wip\n",
-      "\n"
+      "To github.com:Theerit/Kaggle_Titanic.git\n",
+      " * [new branch]      feat3/wip -> feat3/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Branched to feat3'\n",
+    "git commit -m 'Added some markdown'\n",
     "git push --set-upstream origin feat3/wip"
    ]
   },
