--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -20,61 +20,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "* feat3/wip\n",
-      "  master\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "git branch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[feat3/wip 9a31e97] Modified some code for filling Nan data\n",
-      " 1 file changed, 58 insertions(+), 23 deletions(-)\n",
-      "Branch feat3/wip set up to track remote branch feat3/wip from origin.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   ea837a4..9a31e97  feat3/wip -> feat3/wip\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
+    "git checkout 'master'\n",
+    "git fetch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Modified some training code'\n",
+    "git commit -m 'Finished testing'\n",
     "git push --set-upstream origin feat3/wip"
    ]
   },
