Added some markdown and branch to feat4

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,19 +11,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Master branch. Will diverge from this branch when want to try something new."
+    "### feat4\n",
+    "Evaluate dropping name and passengerID feature on randomforest feature importance evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  cost1/feat1/wip\n",
+      "  cost1/feat2/wip\n",
+      "  cost1/wip\n",
+      "  feat1/score1/wip\n",
+      "  feat1/wip\n",
+      "  feat2/score1/wip\n",
+      "  feat2/wip\n",
+      "  feat3/wip\n",
+      "* feat4/wip\n",
+      "  master\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "git checkout -b 'cost1/wip'"
+    "git branch"
    ]
   },
   {
@@ -54,8 +72,8 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Added some markdown'\n",
-    "git push"
+    "git commit -m 'Added some markdown and branch to feat4'\n",
+    "git push --set-upstream feat4/wip"
    ]
   },
   {
