Added some markdown and branch to feat4

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -55,17 +55,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master c0b39e4] Established baseline master branch\n",
-      " 1 file changed, 1500 insertions(+), 1457 deletions(-)\n",
-      " rewrite Titanic.ipynb (81%)\n"
+      "[feat4/wip c0c33c2] Added some markdown and branch to feat4\n",
+      " 1 file changed, 25 insertions(+), 7 deletions(-)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   af209b1..c0b39e4  master -> master\n"
+      "fatal: 'feat4/wip' does not appear to be a git repository\n",
+      "fatal: Could not read from remote repository.\n",
+      "\n",
+      "Please make sure you have the correct access rights\n",
+      "and the repository exists.\n"
      ]
     }
    ],
