Added some markdown and branch to feat4

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -55,19 +55,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat4/wip c0c33c2] Added some markdown and branch to feat4\n",
-      " 1 file changed, 25 insertions(+), 7 deletions(-)\n"
+      "[feat4/wip 56a5898] Added some markdown and branch to feat4\n",
+      " 1 file changed, 8 insertions(+), 6 deletions(-)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: 'feat4/wip' does not appear to be a git repository\n",
-      "fatal: Could not read from remote repository.\n",
+      "fatal: The current branch feat4/wip has no upstream branch.\n",
+      "To push the current branch and set the remote as upstream, use\n",
       "\n",
-      "Please make sure you have the correct access rights\n",
-      "and the repository exists.\n"
+      "    git push --set-upstream origin feat4/wip\n",
+      "\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git commit -m 'Added some markdown and branch to feat4'\n",
-    "git push --set-upstream feat4/wip"
+    "git push --set-upstream origin feat4/wip"
    ]
   },
   {
