Branched to feat5 and add markdown

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### feat4\n",
+    "### feat5\n",
     "Evaluate dropping name and passengerID feature on randomforest feature importance evaluation.\n",
-    "Threshold cutoff of 0.005. Accuracy as eval metric."
+    "Threshold cutoff of 0.001. Accuracy as eval metric."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -35,29 +35,47 @@
       "  feat2/score1/wip\n",
       "  feat2/wip\n",
       "  feat3/wip\n",
-      "* feat4/wip\n",
+      "  feat4/wip\n",
+      "* feat5/wip\n",
       "  master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout -b 'feat5/wip'\n",
-    "git fetch"
+    "git branch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[feat4/wip 2b24ef2] Finished testing\n",
+      " 1 file changed, 1270 insertions(+), 1270 deletions(-)\n",
+      "Branch feat4/wip set up to track remote branch feat4/wip from origin.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To github.com:Theerit/Kaggle_Titanic.git\n",
+      "   d46c3e1..2b24ef2  feat4/wip -> feat4/wip\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Finished testing'\n",
-    "git push --set-upstream origin feat4/wip"
+    "git commit -m 'Branched to feat5 and add markdown'\n",
+    "git push --set-upstream origin feat5/wip"
    ]
   },
   {
